# CLCheckers2ThePathOfQTness

./: .gitignore  Button.png~  CMakeLists.txt  PressedButton.png~  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_cv.ui  makenewgamedialog.cpp  makenewgamedialog.h  makenewgamedialog.ui  resources.qrc
additional/: AssetLoader.cpp  AssetLoader.h  Auxiliary.cpp  Auxiliary.h  BoardRenderer.cpp  BoardRenderer.h  GameState.cpp  GameState.h  PartyLogger.cpp  PartyLogger.h
auxTypes/: cursormovedirections.h  gameType.h  gameflags.h  gameparameters.h  gamesavedata.h  gamestate.h  pathmapmarker.h
clcengine2/: clcengine2.h
clcengine2/analyzer/: AbstractComputerRival.cpp  AbstractComputerRival.h  AnalyzerContainer.h  ComputerRivalMinimax.cpp  ComputerRivalMinimax.h  ComputerRivalRandom.cpp  ComputerRivalRandom.h  Difficulty.h  EvalTable.cpp  EvalTable.h  EvalTables.h  RivalType.h  analyzer.h
clcengine2/auxiliary/: DynamicSequence.cpp  DynamicSequence.h  auxiliary.h
clcengine2/board/: Board.cpp  Board.h  BoardCell.cpp  BoardCell.h  board_pkg.h
clcengine2/checker/: Checker.cpp  Checker.h  CheckerMetaInfo.h  checker_pkg.h
clcengine2/game/: Game.cpp  Game.h
clcengine2/movefinder/: AbstractMoveFinder.cpp  AbstractMoveFinder.h  CommonMoveFinder.cpp  CommonMoveFinder.h  KingMoveFinder.cpp  KingMoveFinder.h  Move.cpp  Move.h  movefinder.h
diagram/: class.puml  clcengine.puml  sequence_on_mouse_click.puml  usecase.puml
scenes/: avatarscene.cpp  avatarscene.h  boardscene.cpp  boardscene.h
